--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "eslint-plugin-vue": "^7.0.0-0",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
-    "lint-staged": "^9.5.0"
+    "lint-staged": "^9.5.0",
+    "postcss-pxtorem": "^5.1.1"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
